changed container to use start.sh as Entrypoint